--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 Django >= 5
 psycopg-binary >= 3.1
-django-bootstrap-v5 >= 1
+django-debug-toolbar >= 4.3
+gunicorn >= 21
+python-dotenv >= 1
+dj-database-url >= 2.1
